style.css
@font-face {
    font-family: 'ethnocentricitalic';
    src: url('fonts/ethnocentric_rg_it-webfont.eot');
    src: url('fonts/ethnocentric_rg_it-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/ethnocentric_rg_it-webfont.woff2') format('woff2'),
         url('fonts/ethnocentric_rg_it-webfont.woff') format('woff'),
         url('fonts/ethnocentric_rg_it-webfont.ttf') format('truetype'),
         url('fonts/ethnocentric_rg_it-webfont.svg#ethnocentricitalic') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'ethnocentricregular';
    src: url('fonts/ethnocentric_rg-webfont.eot');
    src: url('fonts/ethnocentric_rg-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/ethnocentric_rg-webfont.woff2') format('woff2'),
         url('fonts/ethnocentric_rg-webfont.woff') format('woff'),
         url('fonts/ethnocentric_rg-webfont.ttf') format('truetype'),
         url('fonts/ethnocentric_rg-webfont.svg#ethnocentricregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'digital';
    src: url('fonts/digital_dismay-webfont.eot');
    src: url('fonts/digital_dismay-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/digital_dismay-webfont.woff2') format('woff2'),
         url('fonts/digital_dismay-webfont.woff') format('woff'),
         url('fonts/digital_dismay-webfont.ttf') format('truetype'),
         url('fonts/digital_dismay-webfont.svg#digital_dismayregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
  background-color: #000;
  margin: 0;
  font-size: 10px;
  text-align: center;
  background-image: url(bg.png);
  background-size: 150%;
  background-position: bottom center;
  background-repeat: no-repeat;
}

body, html {
  height: 100%;
}

.logo {
  background-image: url(logo.png);
  background-size: 100%;
  background-repeat: no-repeat;
  width: 540px;
  height: 240px;
  position: absolute;
  top: 35px;
  left: 45%;
  margin-left: -250px;
}

.timer {
  position: absolute;
  top: 350px;
  left: 50%;
  margin-left: -350px;
  width: 600px;

  font-family: 'digital';
  font-size: 6rem;
  color: #ff0000;
  text-align: center;
  text-shadow: 0 0 10px #ee0000;
}


#player1, #player2 {
  position: absolute;
  top: 50%;
  margin-top: -40em;
}

#player1 {
  left: -50px;
  width: 85em;
  height: 85em;
  font-size: 10px;
  background-image: url(ui-p1.png);
  background-size: 100%;
  /*-webkit-transform: rotateY(30deg) rotateX(15deg);*/
}

#player2 {
  right: -35px;
  width: 85em;
  height: 85em;
  font-size: 10px;
  background-image: url(ui-p2.png);
  background-size: 100%;
  /*-webkit-transform: rotateY(-30deg) rotateX(15deg); */
}

/*
------------------------------------------------
GAUGE POSITIONING + SIZING
------------------------------------------------
*/

#p1speed, #p2speed {
  top: 15em;
  left: 5.2em;
  width: 29em;
  font-size: 20.5px;
}

#p1thrust, #p2thrust {
  top: 19.5em;
  left: 5.2em;
  font-size: 20.5px;
}

#p1rpm, #p2rpm {
  top: 43em;
  left: 23em;
  width: 29em;
  font-size: 15px;
}
  .pRPM .value:after {
    content: 'x1000';
    position: absolute;
    bottom: -2.5em;
    right: -2.5em;
    font-size: 0.25em;
    margin-left: 1em;
    text-shadow: none;
  }

#p1fuel, #p2fuel {
  top: 600px;
  left: 100px;
  font-size: 15px;
  display: none;
}

#p1gear, #p2gear {
  top: 56em;
  left: 30em;
  font-size: 13px;
}


.pLap {
  position: absolute;
  top: 10.9em;
  left: 3.2em;
  width: 4em;
  text-align: center;
  font-size: 50px;
  font-family: 'ethnocentricitalic';

  color: white;
  z-index: 1000;
}

  .pLap div {
    display: inline-block;
  }

  .pLap .currentLap {
    font-size: 1.8em;
  }

  .pLap .totalLaps {
    font-size: 1em;
    position: relative;
    margin-left: 0.2em;
  }

  .pLap .totalLaps:before {
    content: '/';
    font-family: 'ethnocentric';
  }

  .pLap .totalLaps:after {
    content: 'lap';
    position: absolute;
    top: -0.6em;
    left: 1em;
    letter-spacing: 0.1em;
    font-size: 0.36em;
  }



/*
------------------------------------------------
SHARED GAUGE STYLES
------------------------------------------------
*/

.gaugeContainer {
  position: absolute;
}

.label {
  font-family: 'ethnocentricitalic';
  font-size: 1.2em;
  color: white;
  margin: 0;
  position: absolute;
  bottom: -0.05em;
  left: 0;
  letter-spacing: 0.1em;
}

.value {
  font-family: 'ethnocentricitalic';
  font-size: 5em;
  color: white;
  position: absolute;
  bottom: -0.1em;
  margin: 0;
  line-height: 1em;
  right: 1.7em;
}

#player1 .value, #player1 .currentLap, #player1 .position  { text-shadow: 0.03em 0.03em 0 #000, 0.06em 0.06em 0 #f00; }
#player2 .value, #player2 .currentLap, #player2 .position  { text-shadow: 0.03em 0.03em 0 #000, 0.06em 0.06em 0 #4498ff; }

.pPosition {
  top: 0.85em;
  left: 1.25em;
  width: 2.08em;
  font-size: 8em;
  position: absolute;
  font-family: 'ethnocentricitalic';
  color: white;
  z-index: 10;
}

  .pPosition div {
    display: inline-block;
  }

.position {
  right: 1.2em;
}

.posLabel {
  font-size: 0.5em;
  margin-left: 0.3em;
  vertical-align: super;
  position: relative;
}

.posLabel:after {
  content: 'place';
  position: absolute;
  font-size: 0.38em;
  left: 0;
  bottom: -0.6em;
}





/*
------------------------------------------------
RADIAL GAUGE
------------------------------------------------
*/

  .pRPM .label {
    left: 2.5em;
  }

  .radial .gauge {
    position: absolute;
    bottom: 5.5em;
    right: 19em;
    -webkit-transform: rotate(-60deg);
    transform-origin: 0 0;
  }

    .radial .gauge .bar {
      position: absolute;
      -webkit-transform-origin: bottom left;
      /*-webkit-perspective: 100px;*/
    }

    .radial .gauge .bar .fill {
      box-shadow: 0.12em 0.1em 0 0 #000;
    }


/*
------------------------------------------------
LINEAR GAUGE
------------------------------------------------
*/

  .linear .gauge {
    position: absolute;
    bottom: 2em;
    left: 7.5em;
  }

    .linear .gauge .bar {
      position: absolute;
      transform: skewX(-15deg);
    }

      .linear .gauge .bar .fill {
        width: 100%;
        height: 100%;
        box-shadow: 0.2em 0.2em 0 0 #000;
      }

/*
------------------------------------------------
GEAR GAUGE
------------------------------------------------
*/

  .gear .gauge {
    position: absolute;
    bottom: 2em;
    left: 6.5em;
  }

    .gear .gauge .bar {
      position: absolute;
      display: table;
    }

      .gear .gauge .bar .fill {
        display: table-cell;
        vertical-align: middle;

        box-shadow: 0.2em 0.2em 0 0 #000;

        width: 100%;
        height: 100%;
        font-family: 'ethnocentricregular';
        font-size: 1.5em;
        padding-top: 0.1em;
        color: #080808;
        text-align: center;
      }

